# sarsen

./: .cruft.json  .env.in  .gitignore  .pre-commit-config-cruft.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment-ci.yml  environment-dev.yml  environment-mindep.yml  environment-minver.yml  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: on-push.yml
ci/: environment-ci.yml  environment-integration.yml
docs/: REQUIREMENTS.md  conf.py  index.md
notebooks/: S1-GRD-IW-backward-geocode.ipynb  S1-GRD-SM-backward-geocode.ipynb  S1-SLC-IW-backward-geocode.ipynb  S1-SLC-IW-cosine-flattening.ipynb  S1-SLC-IW-gamma-flattening.ipynb  S1-SLC-SM-backward-geocode.ipynb  dev_backward-geocode.ipynb  download_data.py  download_data.sh  exendend_tests_on_memory.ipynb  exendend_tests_on_processing_time-v0.9.2.ipynb  exendend_tests_on_processing_time.ipynb  extended_profiling_of_terrain_corrections.ipynb  extended_tests_on_different_areas.ipynb  gamma_wrt_incidence_angle-S1-GRD-IW-RTC-South-of-Redmond.ipynb  test-S1-GRD-IW-RTC-Gran-Sasso.ipynb  test-S1-GRD-IW-RTC-GranSasso-gamma-flattening.ipynb  test-S1-GRD-IW-RTC-GranSasso.ipynb  test-S1-GRD-IW-RTC-South-of-Redmond-gamma-flattening.ipynb  test-S1-GRD-IW-RTC-South-of-Redmond.ipynb  test-S1-SLC-IW-gamma-flattening.ipynb
sarsen/: __init__.py  __main__.py  apps.py  chunking.py  datamodel.py  geocoding.py  orbit.py  radiometry.py  scene.py  sentinel1.py
tests/: conftest.py  test_00_version.py  test_10_chunking.py  test_10_datamodel.py  test_10_orbit.py  test_10_scene.py  test_10_sentinel1.py  test_20_geocoding.py  test_20_sentinel1.py  test_30_radiometry.py  test_50_apps.py  test_60_main.py
tests/data/: Rome-30m-DEM.tif
tests/data/S1A_IW_SLC__1SDV_20220104T170557_20220104T170624_041314_04E951_F1F1.SAFE/: manifest.safe
tests/data/S1A_IW_SLC__1SDV_20220104T170557_20220104T170624_041314_04E951_F1F1.SAFE/annotation/: s1a-iw1-slc-vv-20220104t170558-20220104t170623-041314-04e951-004.xml
tests/data/S1A_IW_SLC__1SDV_20220104T170557_20220104T170624_041314_04E951_F1F1.SAFE/annotation/calibration/: calibration-s1a-iw1-slc-vv-20220104t170558-20220104t170623-041314-04e951-004.xml
tests/data/S1A_IW_SLC__1SDV_20220104T170557_20220104T170624_041314_04E951_F1F1.SAFE/measurement/: s1a-iw1-slc-vv-20220104t170558-20220104t170623-041314-04e951-004.tiff
tests/data/S1B_IW_GRDH_1SDV_20211223T051122_20211223T051147_030148_039993_5371.SAFE/: manifest.safe
tests/data/S1B_IW_GRDH_1SDV_20211223T051122_20211223T051147_030148_039993_5371.SAFE/annotation/: s1b-iw-grd-vv-20211223t051122-20211223t051147-030148-039993-001.xml
tests/data/S1B_IW_GRDH_1SDV_20211223T051122_20211223T051147_030148_039993_5371.SAFE/annotation/calibration/: calibration-s1b-iw-grd-vv-20211223t051122-20211223t051147-030148-039993-001.xml  noise-s1b-iw-grd-vv-20211223t051122-20211223t051147-030148-039993-001.xml
tests/data/S1B_IW_GRDH_1SDV_20211223T051122_20211223T051147_030148_039993_5371.SAFE/annotation/rfi/: rfi-s1b-iw-grd-vv-20211223t051122-20211223t051147-030148-039993-001.xml
tests/data/S1B_IW_GRDH_1SDV_20211223T051122_20211223T051147_030148_039993_5371.SAFE/measurement/: s1b-iw-grd-vv-20211223t051122-20211223t051147-030148-039993-001.tiff
