[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "attrs",
  "flox",
  "numpy",
  "pandas",
  "rasterio",
  "rioxarray",
  "typer",
  "xarray >= 2023.12.0",
  "xarray-sentinel >= 0.9.3"
]
description = "Algorithms and utilities for Synthetic Aperture Radar (SAR) sensors"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "sarsen"
readme = "README.md"

[project.scripts]
sarsen = "sarsen.__main__:app"

[tool.coverage.run]
branch = true

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["py", "rasterio"]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["sarsen"]

[tool.setuptools.package-data]
sarsen = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "999"
write_to = "sarsen/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
