[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[dependency-groups]
dev = [
  "cfchecker>=4.1.0",
  "mypy>=1.15.0",
  "pandas-stubs>=1.4.0",
  "pytest>=7.0",
  "pytest-cov>=5.0",
  "setuptools>=64.0",
  "shapely>=2.1",
  "zarr>=2.18.3"
]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "attrs>=24.0",
  "dask>=2023.2.0",
  "flox>=0.9.13",
  "numpy>=1.23.0",
  "pandas>=1.4.0",
  "rioxarray>=0.15.0",
  "typer>=0.11",
  "xarray>=2023.12.0",
  "xarray-sentinel>=0.9.3"
]
description = "Algorithms and utilities for Synthetic Aperture Radar (SAR) sensors"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "sarsen"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
sarsen = "sarsen.__main__:app"

[tool.coverage.run]
branch = true

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["py", "rasterio"]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["sarsen"]

[tool.setuptools.package-data]
sarsen = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "999"
write_to = "sarsen/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
