[metadata]
name = sarsen
author = B-Open
author_email = software@bopen.eu
license = Apache License 2.0
description = Algorithms and utilities for SAR sensors
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.9
install_requires =
    attrs
    click
    numpy >= 1.20.0
    rioxarray
    xarray >= 0.18.0
    xarray-sentinel
include_package_data = True

[options.entry_points]
console_scripts =
    sarsen = sarsen.app:sarsen_cli

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]

[mypy-rasterio]
ignore_missing_imports = True

[mypy-rioxarray]
ignore_missing_imports = True
