[metadata]
name = sarsen
author = B-Open
author_email = software@bopen.eu
license = Apache License 2.0
description = Algorithms and utilities for SAR sensors
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.8
install_requires =
    attrs
    click
    numpy >= 1.22.0
    rioxarray
    xarray >= 0.20.2
    xarray-sentinel >= 0.2
include_package_data = True

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]

[mypy-pandas]
ignore_missing_imports = True

[mypy-rasterio]
ignore_missing_imports = True

[mypy-sentinelsat]
ignore_missing_imports = True

[mypy-xarray_sentinel]
ignore_missing_imports = True
