[metadata]
name = sarsen
author = B-Open
author_email = software@bopen.eu
license = Apache License 2.0
description = Algorithms and utilities for Synthetic Aperture Radar (SAR) sensors
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md
keywords = algorithms, copernicus, earth-observation, remote-sensing, sentinel-1, sar, synthetic-aperture-radar, xarray

[options]
packages = find:
python_requires = >=3.8
install_requires =
    attrs
    flox
    numpy
    pandas
    rasterio
    rioxarray
    typer
    xarray >= 0.20.2
    xarray-sentinel >= 0.9.2

[options.entry_points]
console_scripts =
    sarsen = sarsen.__main__:app

[flake8]
max-line-length = 120
extend-ignore = E203, W503

[mypy]

[mypy-dask.distributed]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-rasterio]
ignore_missing_imports = True

[mypy-sentinelsat]
ignore_missing_imports = True

[mypy-typer]
ignore_missing_imports = True

[mypy-dask.array]
implicit_reexport = True
